--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@ li a{
 
 
 
-
+pad
 
 
 /* === ==========================================================
@@ -119,7 +119,97 @@ CSS FOR BLOGS
 
 width: 
 
-================================================================== */
+===================================================*/
+
+.lorem-ipsum{
+    font-weight: bolder;
+    font-family: monospace;
+}
+
+
+#the-blogs{
+    background: white;
+    text-align: left;
+    font-size: 25px;
+    padding-bottom: 40px;
+    width: 80%;
+    display: block;
+    margin: 30px auto; 
+    color: black;
+}
+
+.blog-title{
+    color: #054d02ff;
+    font-size: 35px; 
+    background: #054d02ff;
+    width: 100%;
+    padding-left: 5px;
+}
+
+
+.blog-content{
+    padding: 30px;
+    background-color: white;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*================================================================== 
+
+
+
 
 .lorem-ipsum {
     font-weight:bolder;
@@ -166,6 +256,20 @@ width:
 }
 
 
+.header{
+    text-align: center;
+    color: black;
+    margin: 40px;
+    font-size: 60px;
+    font-family: cursive;
+}
+
+
+
+========================*/
+
+
+
 /*===============================Review page=========================================*/
 
 
@@ -199,7 +303,9 @@ width:
     margin: 20px auto;
 }
 
-
+.reviewpage{
+    margin: 2%; 
+}
 
 
 
