--- a/css/style.css
+++ b/css/style.css
@@ -108,18 +108,22 @@ li a{
 
 
 
-pad
-
-
-/* === ==========================================================
-
-CSS FOR BLOGS
 
 
 
-width: 
+/* =======================CSS for blogs, about us page==========================================*/
 
-===================================================*/
+
+
+
+
+.start-of-page{
+color:black;
+font-size: 50px;
+text-align: center;
+font-family: monospace;
+}
+
 
 .lorem-ipsum{
     font-weight: bolder;
@@ -130,7 +134,7 @@ width:
 #the-blogs{
     background: white;
     text-align: left;
-    font-size: 25px;
+    font-size: 20px;
     padding-bottom: 40px;
     width: 80%;
     display: block;
@@ -139,173 +143,61 @@ width:
 }
 
 .blog-title{
-    color: #054d02ff;
-    font-size: 35px; 
+    color: white;
+    font-size: 25px; 
     background: #054d02ff;
     width: 100%;
-    padding-left: 5px;
+    padding: 10px;
 }
 
 
 .blog-content{
-    padding: 30px;
+    padding: 50px;
     background-color: white;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*================================================================== 
-
-
-
-
-.lorem-ipsum {
-    font-weight:bolder;
-    
-    font-family: calibri;
-}
-
-
-#the-blogs {
-    margin: 30px auto;
-    width: 80%;
-    text-align: left;
-    
-    color: black;
-}
-
-.blog-title {
-    color: black;
-    font-size: 35px;
-    font-family: 'ZCOOL KuaiLe', cursive;
-    background-color:#054d02ff;
-  ;
-    padding: 10px 10px;
-    text-align: center;   
-}
-
-
-.blog-content{
-    
-     width: 80%;
-    background-color: white;
-    text-align: justify;
-    padding-bottom: 100px;
-    padding: 25px 25px;
-    margin: 30px auto;
-    display: block; 
-    color: black;
-}
-    
-    
-
-.topofpage{
-    margin:25px;
-}
-
-
-.header{
-    text-align: center;
-    color: black;
-    margin: 40px;
-    font-size: 60px;
-    font-family: cursive;
-}
-
-
-
-========================*/
-
-
-
-/*===============================Review page=========================================*/
-
-
-.aboutustitle{
     color:black;
 }
 
-
-  .reviews{
-    width: 80%;
-    text-align: justify;
-    margin: 20px auto;
-    display: block; 
+.header{
+    padding: 40px;
     color: black;
-    
+    text-align: center;
+    font-size: 70px; 
 }
 
-.review-info {
-    width: 80%;
-    display: block;
-    margin: 20px auto;
+
+
+/*===============================Merchandise page=========================================*/
+
+.header{
+    text-align: center;
+    color: black; 
 }
 
-.review-pic {
-    display: block;
-    margin: 20px auto;
-    width: 75%;
-} 
 
-.aboutus{
-    margin: 20px auto;
-}
 
-.reviewpage{
-    margin: 2%; 
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
