--- a/css/style.css
+++ b/css/style.css
@@ -173,9 +173,14 @@ font-family: monospace;
     color: black; 
 }
 
+.hat{
+    width: 75%; 
+}
 
-
-
+.DESC{
+    color: black; 
+    font-family:cursive; 
+}
 
 
 
